--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 .hero {
-    display: flex;
-    justify-content: space-between;
-    background-color: #004f44;
-    margin: 0 auto;
-    padding-left: 5vw;
-    padding-right: 5vw;
-    padding-top: 3vw;
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+  background-color: #004f44;
+  margin: 0 auto;
+  padding-left: 5vw;
+  padding-right: 5vw;
+  padding-top: 3vw;
 }
+
 .gradient {
   position: relative;
   overflow: hidden;
-  background: url("flower.jpg") no-repeat center center/cover; /* Фоновое изображение */
-  width: 380px; 
+  background: url("flower.jpg") no-repeat center center/cover;
+  /* Фоновое изображение */
+  width: 380px;
   height: 648px;
 }
 
@@ -21,10 +24,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 40%; /* Градиент покрывает всё изображение */
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), #00332c); /* Градиент сверху вниз */
-  z-index: 1; /* Помещает градиент поверх изображения */
+  height: 40%;
+  /* Градиент покрывает всё изображение */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), #00332c);
+  /* Градиент сверху вниз */
+  z-index: 1;
+  /* Помещает градиент поверх изображения */
 }
-
-
-
